updated image, fixed spacing

--- a/less/index.less
+++ b/less/index.less
@@ -130,12 +130,16 @@ footer {
 	border: 1px solid black;
 }
 
-.container .about img {
-	width: 20%;
+.container .about {
+	margin: 10%;
+}
+
+.container img {
+	width: 40%;
 	display: inline-block;
 	float: left;
-	margin-left: 4%;
-	margin-right: 36%;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 .container .about h1 {
@@ -166,7 +170,7 @@ footer {
 
 .container .main-content .content p {
 	.spacing2();
-	margin: 7px;
+	margin: 6%;
 }
 
 .container .main-content .content ul li {
